[gd_scene load_steps=13 format=3 uid="uid://beogpr5u53k5g"]

[ext_resource type="Script" path="res://world/enemy/enemy.gd" id="1_8n0ev"]
[ext_resource type="Texture2D" uid="uid://cqllv3n16j73n" path="res://world/enemy/skull_enemy.png" id="2_2it2p"]
[ext_resource type="PackedScene" uid="uid://dwe51q20dr2gn" path="res://common/kill_zone.tscn" id="2_dda7s"]
[ext_resource type="AudioStream" uid="uid://djf04gpykgurh" path="res://world/enemy/skull_laugh.mp3" id="4_wohjg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tnk0r"]
atlas = ExtResource("2_2it2p")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_gley1"]
atlas = ExtResource("2_2it2p")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvi3u"]
atlas = ExtResource("2_2it2p")
region = Rect2(36, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaph5"]
atlas = ExtResource("2_2it2p")
region = Rect2(0, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgcwr"]
atlas = ExtResource("2_2it2p")
region = Rect2(18, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jptyr"]
atlas = ExtResource("2_2it2p")
region = Rect2(36, 18, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_74vup"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnk0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gley1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvi3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaph5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgcwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jptyr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qyui"]
size = Vector2(12, 15)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_8n0ev")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -5)
sprite_frames = SubResource("SpriteFrames_74vup")
autoplay = "default"
frame_progress = 0.593365

[node name="KillZone" parent="." instance=ExtResource("2_dda7s")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_1qyui")

[node name="FloorDetectionRaycast" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, 5)

[node name="WallDetectionRaycast" type="RayCast2D" parent="."]
position = Vector2(6, -6)
target_position = Vector2(3, 0)
collision_mask = 2

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wohjg")
bus = &"enemies"

[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
